loopdowhile.Poucet2.scala.error
Compilation error:
Poucet2:10: error: illegal start of simple expression
  if(baggle<=2)){
               ^